syntax = "proto3";

package article.v1;

import "api/article/v1/article_data.proto";

option go_package = "./articlePb";

// The greeting service definition.
service Article {
  // Sends a greeting
  rpc GetArticleBySlug (GetArticleBySlugRequest) returns (GetArticleBySlugReply)  {}
  rpc BatchGetArticles (BatchGetArticlesRequest) returns (BatchGetArticlesReply) {}
}

// The request message containing the user's name.
message GetArticleBySlugRequest {
  string slug = 1 [json_name = "slug"];
}

// The response message containing the greetings
message GetArticleBySlugReply {
  articleData article = 3;
}


message BatchGetArticlesRequest {
  repeated int64 id = 1;
}

message BatchGetArticlesReply {
  string message = 1;
}